<resources>
    <string name="app_name" translatable="false">FirstAPP</string>
    <string name="action_settings">Settings</string>
    <string name="app_birthday">Happy Birthday</string>
    <string name="yours">From_IreneChia</string>
    <string name="to_name">To_Sherlok</string>
    <string name="teamName1">TeamA</string>
    <string name="teamName2">TeamB</string>
    <string name="Score">Score</string>
    <string name="lab_1">+1 point</string>
    <string name="lab_2">+2 points</string>
    <string name="lab_3">+3 points</string>
    <string name="first_score">0</string>
    <string name="reset">reset</string>
    <string name="inputRMB">Imput RMB</string>
    <string name="hello">Hello</string>
    <string name="btn_Euro">Euro</string>
    <string name="btn_Won">Won</string>
    <string name="btn_Dollar">Dollar</string>
    <string name="config">config</string>
    <string name="btn_save_lab">Save</string>
    <string name="lable_open_list">OpenList</string>
    <string name="searchWord">请输入关键词</string>
    <string name="find">查找</string>

</resources>
