<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="731dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/teamName1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/AScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_score"
                android:textSize="55sp" />

            <Button
                android:id="@+id/score1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:onClick="btnAdd1"
                android:text="@string/lab_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/score2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="btnAdd2"
                android:text="@string/lab_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/score3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="btnAdd3"
                android:text="@string/lab_3"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="2dp"
            android:layout_height="500dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/black"
            android:text="" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="100dp"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/teamName2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/BScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_score"
                android:textSize="55sp" />

            <Button
                android:id="@+id/score4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:onClick="btnAdd1"
                android:text="@string/lab_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/score5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="btnAdd2"
                android:text="@string/lab_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/score6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="btnAdd3"
                android:text="@string/lab_3"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnReset"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:text="@string/reset"
        android:textSize="15sp" />


</LinearLayout>